[package]
name = "raft_rust"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rand = "0.7.3"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "debug_client"
path = "src/server/debug.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"